# metal

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  block.rs  buildout.rs  exprs.mt  f.bash  formal.rs  g.mt  rustc-ice-2024-11-29T15_11_37-12152.txt  test.mt
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/have-changed/: action.yml
.github/actions/setup-llvm/: action.yml
.github/workflows/: audit.yml  clippy.yml  license-headers.yml  nightlies.yml  rustfmt.yml  shear.yml  test.yml
assets/: grammar.hs
crates/cart/: Cargo.toml  Cart.example.toml
crates/cart/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/cart/src/cli/: dev.rs
crates/cart/src/cli/dev/: lex.rs  lex_ng.rs  parse.rs  parse_ng.rs
crates/debug-to-display/: Cargo.toml
crates/debug-to-display/src/: lib.rs
crates/drill/: Cargo.toml  Drill.example.toml
crates/drill/src/: config.rs  error.rs  main.rs
crates/drill/src/cli/: help.rs  main.rs  mod.rs
crates/metal/: Cargo.toml
crates/metal-analyzer/: Cargo.toml
crates/metal-analyzer/src/: database.rs  diagnostics.rs  error.rs  expr.rs  functions.rs  introspection.rs  items.rs  lib.rs  module.rs  statement.rs  types.rs
crates/metal-ast/: Cargo.toml
crates/metal-ast-ng/: Cargo.toml  build.rs  metal.ungram
crates/metal-ast-ng/src/: lib.rs  nodes.rs  rowan.rs  syntax_kind.rs  tokens.rs  traits.rs  utils.rs
crates/metal-ast-ungram/: Cargo.toml
crates/metal-ast-ungram/src/: debug.rs  engram.rs  error.rs  grammar_item.rs  lib.rs  utils.rs
crates/metal-ast-ungram/src/generate/: mod.rs  nodes.rs  rules.rs  syntax_kind.rs  tokens.rs  utils.rs
crates/metal-ast-ungram/src/generate/nodes/: enum_.rs  node_enums.rs  node_struct.rs  rule.rs  struct_.rs
crates/metal-ast-ungram/src/generate/tokens/: enum_.rs  rule.rs  struct_.rs  token_alt_nodes.rs  token_structs.rs
crates/metal-ast/src/: codegen.rs  expr.rs  item.rs  lib.rs  misc.rs  nodes.rs  statement.rs  syntax_kind.rs  tokens.rs  traits.rs  ty.rs  utils.rs
crates/metal-ast/src/expr/: call.rs  lit.rs
crates/metal-ast/src/item/: const_def.rs  const_item.rs  enum_def.rs  enum_item.rs  expr.rs  fn_def.rs  fn_item.rs  import.rs  struct_def.rs  struct_item.rs
crates/metal-ast/src/statement/: expr.rs  fn_def.rs  import.rs  struct_def.rs
crates/metal-codegen-llvm/: Cargo.toml
crates/metal-codegen-llvm/src/: core.rs  expr.rs  lib.rs  linking.rs  llc.rs  primitives.rs  safeties.rs  stmt.rs  ty.rs
crates/metal-codegen-llvm/src/stmt/: constant.rs  function_definition.rs
crates/metal-codegen-llvm/src/ty/: function_signature.rs  struct_.rs
crates/metal-codegen-wasm/: Cargo.toml
crates/metal-codegen-wasm/src/: constants.rs  functions.rs  lib.rs  utils.rs
crates/metal-formatter/: Cargo.toml
crates/metal-lexer/: Cargo.toml
crates/metal-lexer-ng/: Cargo.toml  build.rs
crates/metal-lexer-ng/src/: lexer.rs  lib.rs  span.rs  token.rs  token_kind.rs
crates/metal-lexer/src/: callbacks.rs  error.rs  lexer.rs  lib.rs  span.rs  tests.rs  token.rs
crates/metal-linter/: Cargo.toml
crates/metal-linter/src/: lib.rs
crates/metal-llvm/: Cargo.toml
crates/metal-llvm/src/: codegen.rs  expr.rs  lib.rs  stdlib_priv.rs  stmt.rs  ty.rs
crates/metal-lsp/: Cargo.toml
crates/metal-mir/: Cargo.toml
crates/metal-mir/src/: lib.rs  parcel.rs  struct_.rs  structure.rs
crates/metal-mir/src/expr/: function_call.rs  literals.rs  mod.rs
crates/metal-mir/src/stmt/: constant.rs  functiondef.rs  import.rs  lets.rs  mod.rs  return_.rs
crates/metal-mir/src/types/: array.rs  function.rs  mod.rs  primitives.rs  tuple.rs  visibility.rs
crates/metal-parser/: Cargo.toml
crates/metal-parser-ng/: Cargo.toml
crates/metal-parser-ng/src/: block.rs  common.rs  expr.rs  item.rs  lib.rs  parser.rs  stmt.rs  type_.rs  utils.rs
crates/metal-parser-ng/src/item/: abstract_.rs  const_.rs  enum_.rs  fn_.rs  import.rs  return_.rs  struct_.rs  type_.rs
crates/metal-parser-ng/src/type_/: name.rs  ref_.rs
crates/metal-parser/src/: block.rs  common.rs  delimiter.rs  expr.rs  item.rs  lib.rs  misc.rs  parser.rs  restrictions.rs  stmt.rs  ty.rs  type_.rs  utils.rs
crates/metal-parser/src/expr/: bp.rs  break_.rs  call.rs  defer.rs  for_.rs  if_.rs  let_.rs  lit.rs  loop_.rs  paren.rs  return_.rs  struct_.rs  while_.rs
crates/metal-parser/src/generics/: args.rs  mod.rs  params.rs  utils.rs
crates/metal-parser/src/item/: abstract_.rs  const_.rs  const_item.rs  enum_.rs  enum_item.rs  fn_.rs  fn_item.rs  import.rs  struct_.rs  struct_item.rs  type_.rs
crates/metal-parser/src/type_/: name.rs  ref_.rs
crates/metal-proc-macros/: Cargo.toml
crates/metal-proc-macros/src/: associativity_table.rs  lib.rs
crates/metal-proc-macros/src/associativity_table/: parse.rs  paste.rs  types.rs
crates/metal-proc-macros/src/spans/: attribute.rs  derive.rs  instance.rs  mod.rs
crates/metal-ungram/: Cargo.toml  metal.ungram
crates/metal-ungram/src/: engram.rs  error.rs  grammar_item.rs  lib.rs  utils.rs
crates/metal-ungram/src/generate/: mod.rs  nodes.rs  rules.rs  syntax_kind.rs  tokens.rs  utils.rs
crates/metal-ungram/src/generate/nodes/: node_enums.rs  node_struct.rs
crates/metal-ungram/src/generate/tokens/: token_alt_nodes.rs  token_kind.rs
crates/metal/src/: cli.rs  error.rs  main.rs
crates/metal/src/cli/: build.rs  dev.rs
crates/metal/src/cli/dev/: parse.rs
crates/metallic/: Cargo.toml
crates/metallic/src/: cli.rs  error.rs  main.rs  target.rs
crates/metallic/src/cli/: build.rs
crates/peekable/: Cargo.toml
crates/peekable/src/: lib.rs
mir-tests/: executable.ron  test_strings.ron  test_structs.ron  test_variables.ron  valid.ron
scripts/: Cargo.toml
scripts/ungram/: immutable.rs  main.rs  names.rs
