[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tapcli = { git = "https://github.com/elenakrittik/gdtk/", rev = "699bffcd52ae85bd7297dbf552eb010ae9bc1f6e" }
logos = { git = "https://github.com/elenakrittik/logos", rev = "533228db3e8bbc9ac27e790628844b7d423e10cb" }
thiserror = "2.0.3"
syn = { version = "2.0.85", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
proc-macro-error2 = "2.0.1"
llvm-sys = { version = "191", features = ["force-static"] }
enum-as-inner = "0.6.1"
wasm-encoder = "0.221.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

drill = { path = "crates/drill" }
metal-ast = { path = "crates/metal-ast" }
metal-codegen-wasm = { path = "crates/metal-codegen-wasm" }
metal-codegen-llvm = { path = "crates/metal-codegen-llvm" }
metal-formatter = { path = "crates/metal-formatter" }
metal-lexer = { path = "crates/metal-lexer" }
metal-linter = { path = "crates/metal-linter" }
metal-lsp = { path = "crates/metal-lsp" }
metal-parser = { path = "crates/metal-parser" }
metal-mir = { path = "crates/metal-mir" }
metal-proc-macros = { path = "crates/metal-proc-macros" }
metallic = { path = "crates/metallic" }
peekable = { path = "crates/peekable" }
debug-to-display = { path = "crates/debug-to-display" }

[workspace.metadata.cargo-shear]
ignored = [

    "metal-ast",
    "metal-parser",
    "metal-codegen-llvm",
    "metal-codegen-wasm",
    "metallic",
    "metal-formatter",
    "metal",
    "metal-linter",
    "metal-lsp",
]

[workspace.lints.clippy]
wildcard_enum_match_arm = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Use this profile for profiling with e.g. cargo-flamegraph
[profile.debug_release]
inherits = "release"
strip = false
debug = true
