[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
ungrammar = { workspace = true }
quote = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "ungram"
path = "./ungram/main.rs"
