[package]
name = "cart"
version = "0.1.0"
edition = "2021"
description = "The Metal Package Manager"

[dependencies]
tapcli = { workspace = true }
thiserror = { workspace = true }
metal-lexer = { workspace = true }
metal-parser = { workspace = true }
metal-lexer-ng = { workspace = true }
debug-to-display = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }

[features]
default = []
dev = []
