[package]
name = "metal-analyzer"
version = "0.1.0"
edition = "2021"
description = "The Metal AST Analyzer."

[dependencies]
salsa = { workspace = true }
bincode = { workspace = true }
metal-mir = { workspace = true }
metal-ast = { workspace = true }
thiserror = { workspace = true }
map-macro = { workspace = true }

[lints]
workspace = true
