[package]
name = "metal-ast-ungram"
version = "0.1.0"
edition = "2021"

[dependencies]
ungrammar = { workspace = true }
quote = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
extend = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[lib]
