[package]
name = "metal-parser-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
rowan = { workspace = true }
metal-lexer-ng = { workspace = true }
metal-ast-ng = { workspace = true }
peekable = { workspace = true }
thiserror = { workspace = true }
extend = { workspace = true }

[lints]
workspace = true
